--- a/INTRODUCTION TO PYTHON/DataCamp_Python.ipynb
+++ b/INTRODUCTION TO PYTHON/DataCamp_Python.ipynb
@@ -1785,6 +1785,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import turtle\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1,4):\n",
+    "    turtle.forward(100)\n",
+    "    turtle.forward(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
